# bcrl

./: .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
CWrapper/: CMakeLists.txt
CWrapper/Include/: BCRL.h
CWrapper/Source/: BCRLWrapper.cpp
Example/: CMakeLists.txt  Main.cpp
Example/C/: Heap.c  Stack.c
Example/CXX/: Main.cpp
Example/Source/: Main.cpp
Include/: BCRL.hpp
Include/BCRL/: FlagSpecification.hpp  SafePointer.hpp  SearchConstraints.hpp  Session.hpp
Include/BCRL/detail/: ConditionalField.hpp  LambdaInserter.hpp
Modules/X86/: CMakeLists.txt
Modules/X86/Include/BCRL/: BCRLx86.hpp
Source/: AddressableMemory.cpp
Source/SafePointer/: Filter.cpp  SafePointer.cpp  Signatures.cpp  Strings.cpp  X86.cpp
Source/Session/: AdvancedFlow.cpp  DownPassers.cpp  Finalizers.cpp  Openers.cpp  Safety.cpp
